--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ carpentry: 'incubator'
 # carpentry_description: "Custom Carpentry"
 
 # Overall title for pages.
-title: 'Lesson Title'
+title: 'Data Empowerment for Election Workers'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
 created: '2025-11-10'
@@ -33,13 +33,13 @@ life_cycle: 'pre-alpha'
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/carpentries/r-election-workers'
+source: 'https://github.com/EngineeringForDemocracy/r-election-workers'
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'team@carpentries.org'
+contact: 'brownsarahm@uri.edu'
 
 # Navigation ------------------------------------------------
 #
@@ -71,7 +71,9 @@ episodes:
 - 02-starting-with-data.Rmd
 - 03-dplyr.Rmd
 - 04-tidyr.Rmd
-# - 05-ggplot2.Rmd
+- 05-ggplot2.Rmd
+- 06-rmarkdown.Rmd
+- 07-json.Rmd
 
 
 # Information for Learners
